--- a/frontend/src/components/index.css
+++ b/frontend/src/components/index.css
@@ -1,3 +1,26 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* Our Custom Classes */
+
+@layer components {
+    .navbar-icon {
+        @apply relative flex items-center justify-center 
+        h-12 w-12 
+        mt-2 mb-2 mx-auto
+        bg-gray-800 text-green-500
+        hover:bg-green-600 hover:text-white
+        rounded-3xl hover:rounded-xl 
+        transition-all duration-200 ease-linear
+        cursor-pointer;
+    }
+
+    .navbar-page-name {
+        @apply absolute w-auto p-2 m-2 min-w-max left-14
+        rounded-md shadow-md
+        text-white bg-gray-900
+        text-xs font-bold
+        transition-all duration-100 scale-0 origin-left;
+    }
+}
