--- a/frontend/src/components/index.css
+++ b/frontend/src/components/index.css
@@ -9,8 +9,8 @@
         @apply relative flex items-center justify-center 
         h-12 w-12 
         mt-2 mb-2 mx-auto
-        bg-gray-800 text-green-500
-        hover:bg-green-600 hover:text-white
+        bg-gray-700 text-green-500
+        hover:bg-green-600
         rounded-3xl hover:rounded-xl 
         transition-all duration-200 ease-linear
         cursor-pointer;
@@ -19,7 +19,7 @@
     .navbar-page-name {
         @apply absolute w-auto p-2 m-2 min-h-max left-2
         rounded-md shadow-md
-        text-white bg-gray-900
+        bg-gray-900 text-white
         text-xs font-bold
         transition-all duration-100 scale-0 origin-bottom-right;
     }
