--- a/frontend/src/components/index.css
+++ b/frontend/src/components/index.css
@@ -9,7 +9,7 @@
         @apply relative flex items-center justify-center 
         h-12 w-12 
         mt-2 mb-2 mx-auto
-        bg-gray-700 text-green-500
+        bg-gray-700
         hover:bg-green-600
         rounded-3xl hover:rounded-xl 
         transition-all duration-200 ease-linear
