--- a/frontend/src/components/index.css
+++ b/frontend/src/components/index.css
@@ -19,7 +19,7 @@
     .navbar-page-name {
         @apply absolute w-auto p-2 m-2 min-h-max left-2
         rounded-md shadow-md
-        bg-gray-900 text-white
+        bg-neutral-900 text-white
         text-xs font-bold
         transition-all duration-100 scale-0 origin-bottom-right;
     }
